--- a/app/src/main/res/layout/dialog_parking_charge.xml
+++ b/app/src/main/res/layout/dialog_parking_charge.xml
@@ -38,7 +38,7 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:id="@+id/tv_carport_search"
+                    android:id="@+id/tv_park_parking_charge_dialog"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="7dp"
