--- a/app/src/main/res/layout/fragment_apply.xml
+++ b/app/src/main/res/layout/fragment_apply.xml
@@ -6,7 +6,7 @@
     android:animateLayoutChanges="true">
 
     <android.support.v7.widget.CardView
-        android:id="@+id/cv_content"
+        android:id="@+id/cv_content_apply_fragment"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="25dp"
@@ -38,12 +38,12 @@
                     android:layout_height="28dp"
                     android:src="@drawable/ic_apply_white_90"
                     android:tint="@color/white_70_percent_alpha"
-                    app:layout_constraintBottom_toTopOf="@+id/tv_des"
-                    app:layout_constraintLeft_toLeftOf="@+id/tv_des"
+                    app:layout_constraintBottom_toTopOf="@+id/tv_des_apply_fragment"
+                    app:layout_constraintLeft_toLeftOf="@+id/tv_des_apply_fragment"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:id="@+id/tv_title"
+                    android:id="@+id/tv_title_apply_fragment"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="7dp"
@@ -52,12 +52,12 @@
                     android:text="办理月卡"
                     android:textColor="@color/white_70_percent_alpha"
                     android:textSize="28sp"
-                    app:layout_constraintBottom_toTopOf="@+id/tv_des"
+                    app:layout_constraintBottom_toTopOf="@+id/tv_des_apply_fragment"
                     app:layout_constraintLeft_toRightOf="@+id/iv_header"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:id="@+id/tv_des"
+                    android:id="@+id/tv_des_apply_fragment"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="15dp"
@@ -68,7 +68,7 @@
                     android:textSize="16sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_title" />
+                    app:layout_constraintTop_toBottomOf="@+id/tv_title_apply_fragment" />
             </android.support.constraint.ConstraintLayout>
 
 
@@ -249,7 +249,7 @@
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/view_indicator_1_apply_fragment"
-        app:layout_constraintTop_toBottomOf="@+id/cv_content" />
+        app:layout_constraintTop_toBottomOf="@+id/cv_content_apply_fragment" />
 
     <View
         android:id="@+id/view_indicator_1_apply_fragment"
@@ -259,7 +259,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/view_indicator_0_apply_fragment"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cv_content" />
+        app:layout_constraintTop_toBottomOf="@+id/cv_content_apply_fragment" />
 
     <android.inputmethodservice.KeyboardView
         android:id="@+id/keyboard"
