--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -37,9 +37,8 @@
                 android:id="@+id/tv_scan_home_fragment"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:drawablePadding="3dp"
                 android:drawableTop="@drawable/ic_scan_white_90"
-                android:gravity="center"
+                android:gravity="center|bottom"
                 android:padding="10dp"
                 android:text="扫一扫"
                 android:textColor="@color/white"
