--- a/app/src/main/res/layout/cp_view_search.xml
+++ b/app/src/main/res/layout/cp_view_search.xml
@@ -25,6 +25,7 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
+        android:imeOptions="actionSearch"
         android:background="@null"
         android:gravity="center_vertical"
         android:hint="@string/cp_hint_search_box"
