--- a/app/src/main/res/layout/activity_camera_play2.xml
+++ b/app/src/main/res/layout/activity_camera_play2.xml
@@ -17,12 +17,6 @@
             android:layout_height="match_parent"
             android:layout_centerVertical="true" />
 
-        <View
-            android:id="@+id/viewblack"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/black" />
-
         <include layout="@layout/view_loading" />
 
         <LinearLayout
@@ -69,44 +63,55 @@
             android:textSize="12sp" />
     </RelativeLayout>
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:orientation="horizontal">
+        android:layout_height="70dp">
+        <View
+            android:background="@color/white"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/iv_mute"
-            android:layout_width="0dp"
-            android:layout_height="70dp"
-            android:layout_weight="1"
-            android:padding="10dp"
-            android:src="@drawable/selector_camera_mute" />
+            <ImageView
+                android:background="@color/white"
+                android:id="@+id/iv_mute"
+                android:layout_width="0dp"
+                android:layout_height="70dp"
+                android:layout_weight="1"
+                android:padding="10dp"
+                android:src="@drawable/selector_camera_mute" />
 
-        <ImageView
-            android:id="@+id/iv_microphone"
-            android:layout_width="0dp"
-            android:layout_height="70dp"
-            android:layout_weight="1"
-            android:padding="10dp"
-            android:src="@drawable/selector_camera_microphone" />
+            <ImageView
+                android:background="@color/white"
+                android:id="@+id/iv_microphone"
+                android:layout_width="0dp"
+                android:layout_height="70dp"
+                android:layout_weight="1"
+                android:padding="10dp"
+                android:src="@drawable/selector_camera_microphone" />
 
-        <ImageView
-            android:id="@+id/iv_video"
-            android:layout_width="0dp"
-            android:layout_height="70dp"
-            android:layout_weight="1"
-            android:padding="10dp"
-            android:src="@drawable/selector_camera_video" />
+            <ImageView
+                android:background="@color/white"
+                android:id="@+id/iv_video"
+                android:layout_width="0dp"
+                android:layout_height="70dp"
+                android:layout_weight="1"
+                android:padding="10dp"
+                android:src="@drawable/selector_camera_video" />
 
-        <ImageView
-            android:id="@+id/iv_photograph"
-            android:layout_width="0dp"
-            android:layout_height="70dp"
-            android:layout_weight="1"
-            android:padding="10dp"
-            android:src="@drawable/selector_camera_photograph" />
-    </LinearLayout>
+            <ImageView
+                android:background="@color/white"
+                android:id="@+id/iv_photograph"
+                android:layout_width="0dp"
+                android:layout_height="70dp"
+                android:layout_weight="1"
+                android:padding="10dp"
+                android:src="@drawable/selector_camera_photograph" />
+        </LinearLayout>
+    </FrameLayout>
 
 
 </LinearLayout>
