--- a/app/src/main/res/layout/fragment_about_us.xml
+++ b/app/src/main/res/layout/fragment_about_us.xml
@@ -18,7 +18,7 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:layout_marginTop="17dp"
-            android:src="@mipmap/ic_app_logo" />
+            android:src="@mipmap/ic_launcher" />
 
         <TextView
             android:id="@+id/tv_version_name"
